--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                                         <i class="bi bi-zoom-in"></i>
                                     </a>
 
-                                    <a href="" title="Mais Inforções" class="details-link">
+                                    <a href="app-1.html" title="Mais Inforções" class="details-link">
                                         <i class="bi bi-link-45deg"> </i>
                                     </a>
 
