--- a/index.html
+++ b/index.html
@@ -566,7 +566,8 @@
 
                                 <div class="portfolio-info">
 
-                                    <a href="img/portfolio/branding-1.jpg" data-gallery="portfolio-gallery"                                  class="glightbox preview-link">
+                                    <a href="img/portfolio/branding-1.jpg" data-gallery="portfolio-gallery"
+                                        class="glightbox preview-link">
                                         <i class="bi bi-zoom-in"></i>
                                     </a>
 
@@ -770,11 +771,51 @@
 
                             </div>
 
-                        </article>     
+                        </article>
                     </div>
                 </div>
             </div>
         </section>
+
+
+        <section id="feedbacks" class="feedbacks">
+
+            <div class="container section-title">
+                <h2> Feedbacks </h2>
+                <div>
+                    <span>Confira as Nossas</span>
+                    <span class="description-title"> Avaliações </span>
+                </div>
+            </div>
+
+            <div class="container">
+
+                <div class="row gy-4">
+
+                    <!-- Feedbacks 1 -->
+                    <article class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                       
+                        <div class="feedback-item">
+
+                            <img src="img/testimonials/testimonials-1.jpg" alt="">
+                        </div>
+                    </article>
+                    
+                    <!-- Feedbacks 2 -->
+                    <article class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="feedback-item">
+                            <img src="img/testimonials/testimonials-2.jpg" alt="">
+                        </div>
+                    </article>
+
+                </div>
+
+            </div>
+        </section>
+
+
+
+
 
         <section id="team" class="team">
 
