--- a/index.html
+++ b/index.html
@@ -794,17 +794,242 @@
 
                     <!-- Feedbacks 1 -->
                     <article class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-                       
+
                         <div class="feedback-item">
 
-                            <img src="img/testimonials/testimonials-1.jpg" alt="">
+                            <img src="img/testimonials/testimonials-1.jpg" alt="" class="feedback-img">
+
+                            <h3> Saul Goodman </h3>
+                            <h4> Ceo &amp; Fundador</h4>
+                            <!-- <h5> Nome da Empresa </h5> -->
+
+                            <div class="stars">
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                            </div>
+
+                            <p>
+                                <i class="bi bi-quote quote-icon-left"> </i>
+                                <span class="fst-italic">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti. Maxime
+                                    dolorem quam ad accusamus quibusdam commodi praesentium dolore eos, repellat maiores
+                                    minima nisi aspernatur sint unde sapiente id. Illo.
+                                </span>
+                                <i class="bi bi-quote quote-icon-right"> </i>
+                            </p>
                         </div>
                     </article>
-                    
+
                     <!-- Feedbacks 2 -->
+                    <article class="col-xl-3 col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="feedback-item">
+
+                            <img src="img/testimonials/testimonials-2.jpg" alt="" class="feedback-img">
+
+                            <h3> Chun Li </h3>
+                            <h4> Co-Fundadora </h4>
+                            <!-- <h5> Nome da Empresa </h5> -->
+
+                            <div class="stars">
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                            </div>
+
+                            <p>
+                                <i class="bi bi-quote quote-icon-left"> </i>
+                                <span class="fst-italic">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti. Maxime
+                                    dolorem quam ad accusamus quibusdam commodi praesentium dolore eos, repellat maiores
+                                    minima nisi aspernatur sint unde sapiente id. Illo.
+                                </span>
+                                <i class="bi bi-quote quote-icon-right"> </i>
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- Feedbacks 3 -->
+                    <article class="col-xl-3 col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="feedback-item">
+
+                            <img src="img/testimonials/testimonials-3.jpg" alt="" class="feedback-img">
+
+                            <h3> Kim Wexler </h3>
+                            <h4> Gerente </h4>
+                            <!-- <h5> Nome da Empresa </h5> -->
+
+                            <div class="stars">
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                            </div>
+
+                            <p>
+                                <i class="bi bi-quote quote-icon-left"> </i>
+                                <span class="fst-italic">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti. Maxime
+                                    dolorem quam ad accusamus quibusdam commodi praesentium dolore eos, repellat maiores
+                                    minima nisi aspernatur sint unde sapiente id. Illo.
+                                </span>
+                                <i class="bi bi-quote quote-icon-right"> </i>
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- Feedbacks 4 -->
                     <article class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                         <div class="feedback-item">
-                            <img src="img/testimonials/testimonials-2.jpg" alt="">
+
+                            <img src="img/testimonials/testimonials-4.jpg" alt="" class="feedback-img">
+
+                            <h3> Harry Osborn </h3>
+                            <h4> Developer </h4>
+                            <!-- <h5> Nome da Empresa </h5> -->
+
+                            <div class="stars">
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                            </div>
+
+                            <p>
+                                <i class="bi bi-quote quote-icon-left"> </i>
+                                <span class="fst-italic">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti. Maxime
+                                    dolorem quam ad accusamus quibusdam commodi praesentium dolore eos, repellat maiores
+                                    minima nisi aspernatur sint unde sapiente id. Illo.
+                                </span>
+                                <i class="bi bi-quote quote-icon-right"> </i>
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- Feedbacks 5 -->
+                    <article class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="feedback-item">
+
+                            <img src="img/testimonials/testimonials-5.jpg" alt="" class="feedback-img">
+
+                            <h3> Enzo da Silva </h3>
+                            <h4> Coordenador de Projetos </h4>
+                            <!-- <h5> Nome da Empresa </h5> -->
+
+                            <div class="stars">
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                            </div>
+
+                            <p>
+                                <i class="bi bi-quote quote-icon-left"> </i>
+                                <span class="fst-italic">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti. Maxime
+                                    dolorem quam ad accusamus quibusdam commodi praesentium dolore eos, repellat maiores
+                                    minima nisi aspernatur sint unde sapiente id. Illo.
+                                </span>
+                                <i class="bi bi-quote quote-icon-right"> </i>
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- Feedbacks 6 -->
+                    <article class="col-xl-3 col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="feedback-item">
+
+                            <img src="img/testimonials/testimonials-6.jpg" alt="" class="feedback-img">
+
+                            <h3> Valentina </h3>
+                            <h4> Arquiteta </h4>
+                            <!-- <h5> Nome da Empresa </h5> -->
+
+                            <div class="stars">
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                            </div>
+
+                            <p>
+                                <i class="bi bi-quote quote-icon-left"> </i>
+                                <span class="fst-italic">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti. Maxime
+                                    dolorem quam ad accusamus quibusdam commodi praesentium dolore eos, repellat maiores
+                                    minima nisi aspernatur sint unde sapiente id. Illo.
+                                </span>
+                                <i class="bi bi-quote quote-icon-right"> </i>
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- Feedbacks 7-->
+                    <article class="col-xl-3 col-lg-6 col-md-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="feedback-item">
+
+                            <img src="img/testimonials/testimonials-6.jpg" alt="" class="feedback-img">
+
+                            <h3> Valentina </h3>
+                            <h4> Arquiteta </h4>
+                            <!-- <h5> Nome da Empresa </h5> -->
+
+                            <div class="stars">
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                            </div>
+
+                            <p>
+                                <i class="bi bi-quote quote-icon-left"> </i>
+                                <span class="fst-italic">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti. Maxime
+                                    dolorem quam ad accusamus quibusdam commodi praesentium dolore eos, repellat maiores
+                                    minima nisi aspernatur sint unde sapiente id. Illo.
+                                </span>
+                                <i class="bi bi-quote quote-icon-right"> </i>
+                            </p>
+                        </div>
+                    </article>
+
+                    <!-- Feedbacks 8 -->
+                    <article class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                        <div class="feedback-item">
+
+                            <img src="img/testimonials/testimonials-6.jpg" alt="" class="feedback-img">
+
+                            <h3> Valentina </h3>
+                            <h4> Arquiteta </h4>
+                            <!-- <h5> Nome da Empresa </h5> -->
+
+                            <div class="stars">
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                                <i class="bi bi-star-fill"> </i>
+                            </div>
+
+                            <p>
+                                <i class="bi bi-quote quote-icon-left"> </i>
+                                <span class="fst-italic">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque, corrupti. Maxime
+                                    dolorem quam ad accusamus quibusdam commodi praesentium dolore eos, repellat maiores
+                                    minima nisi aspernatur sint unde sapiente id. Illo.
+                                </span>
+                                <i class="bi bi-quote quote-icon-right"> </i>
+                            </p>
                         </div>
                     </article>
 
@@ -814,10 +1039,191 @@
         </section>
 
 
-
-
-
         <section id="team" class="team">
+
+            <div class="container section-title" data-aos="fade-up">
+                <h2>Equipe</h2>
+                <div>
+                    <span>Conheça Nosso </span>
+                    <span class="description-title"> Time </span>
+                </div>
+            </div>
+
+            <div class="container">
+
+
+                <div class="row gy-4">
+
+
+
+                    <!-- Funcionario 1 -->
+                    <article class="col-xl-3 col-lg-6 col-md-6">
+
+                        <div class="member">
+
+                            <img src="img/team/team-1.jpg" alt="" class="img-fluid">
+
+                            <div class="member-info text-center">
+
+                                <div class="member-info-content">
+                                    <h3>Walter White</h3>
+                                    <span>
+                                        Chefe Executivo
+                                    </span>
+                                </div>
+
+                                <div class="social">
+                                    <a href="https://www.instagram.com/" target="_blank">
+
+                                        <i class="bi bi-instagram"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-facebook"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-github"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </article>
+
+
+
+                    <!-- Funcionario 2 -->
+                    <article class="col-xl-3 col-lg-6 col-md-6">
+
+                        <div class="member">
+
+                            <img src="img/team/team-2.jpg" alt="" class="img-fluid">
+
+                            <div class="member-info text-center">
+
+                                <div class="member-info-content">
+                                    <h3>Sarah Jhoson</h3>
+                                    <span>
+                                        Gerente
+                                    </span>
+                                </div>
+
+                                <div class="social">
+                                    <a href="https://www.instagram.com/" target="_blank">
+
+                                        <i class="bi bi-instagram"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-facebook"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-github"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </article>
+
+                    <!-- Funcionario 3 -->
+                    <article class="col-xl-3 col-lg-6 col-md-6">
+                        <div class="member">
+
+                            <img src="img/team/team-3.jpg" alt="" class="img-fluid">
+
+                            <div class="member-info text-center">
+
+                                <div class="member-info-content">
+                                    <h3>William Anderson</h3>
+                                    <span>
+                                        Contator
+                                    </span>
+                                </div>
+
+                                <div class="social">
+                                    <a href="https://www.instagram.com/" target="_blank">
+
+                                        <i class="bi bi-instagram"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-facebook"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-github"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </article>
+
+
+                    <!-- Funcionario 4 -->
+                    <article class="col-xl-3 col-lg-6 col-md-6">
+                        <div class="member">
+
+                            <img src="img/team/team-4.jpg" alt="" class="img-fluid">
+
+                            <div class="member-info text-center">
+
+                                <div class="member-info-content">
+                                    <h3>Amanda Jepsen</h3>
+                                    <span>
+                                        CTO
+                                    </span>
+                                </div>
+
+                                <div class="social">
+                                    <a href="https://www.instagram.com/" target="_blank">
+
+                                        <i class="bi bi-instagram"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-facebook"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-github"></i>
+                                    </a>
+
+                                    <a href="" target="_blank">
+                                        <i class="bi bi-linkedin"></i>
+                                    </a>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </article>
+
+                </div>
+
+            </div>
+
+
 
         </section>
 
