update Team final

--- a/index.html
+++ b/index.html
@@ -1054,8 +1054,6 @@
 
                 <div class="row gy-4">
 
-
-
                     <!-- Funcionario 1 -->
                     <article class="col-xl-3 col-lg-6 col-md-6">
 
@@ -1228,6 +1226,52 @@
         </section>
 
         <section id="contact" class="contact">
+
+            <div class="container section-title" data-aos="fade-up">
+                <h2>Suporte</h2>
+                <div>
+                    <span>Precisa de Ajuda? </span>
+                    <span class="description-title"> Entre em Contato </span>
+                </div>
+            </div>
+
+            <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+                <div class="row gy-4">
+
+                    <!-- Coluna 1 -->
+                    <div class="col-lg-6">
+                        
+                        <div class="row gy-4">
+
+                            <!-- Bloco 1 -->
+                            <div class="col-md-6">
+                                Bloco 1
+                            </div>
+                            <!-- Bloco 2 -->
+                            <div class="col-md-6">
+                                Bloco 2
+                            </div>
+                            <!-- Bloco 3 -->
+                            <div class="col-md-6">
+                                Bloco 3
+                            </div>
+                            <!-- Bloco 4 -->
+                            <div class="col-md-6">
+                                Bloco 4
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                     <div class="col-lg-6">
+                        Coluna 2
+                     </div>
+
+                </div>
+
+            </div>
 
         </section>
 
