--- a/index.html
+++ b/index.html
@@ -1244,25 +1244,55 @@
                         
                         <div class="row gy-4">
 
-                            <!-- Bloco 1 -->
+                            <!-- Endereço -->
                             <div class="col-md-6">
-                                Bloco 1
-                            </div>
-                            <!-- Bloco 2 -->
-                            <div class="col-md-6">
-                                Bloco 2
-                            </div>
-                            <!-- Bloco 3 -->
-                            <div class="col-md-6">
-                                Bloco 3
-                            </div>
-                            <!-- Bloco 4 -->
-                            <div class="col-md-6">
-                                Bloco 4
+                                <div class="info-item" data-aos="fade-up" data-aos-delay="200">
+
+                                    <i class="bi bi-geo-alt"></i>
+                                    <h3>Endereço</h3>
+
+                                    <p>Rua Sei la, 200</p> 
+
+                                    <p>São Paulo - SP</p>
+
+                                </div>
                             </div>
 
+
+                            <!-- WhatsApp -->
+                            <div class="col-md-6">
+                                <div class="info-item" data-aos="fade-up" data-aos-delay="300">
+                                    <i class="bi bi-whatsapp"></i>
+                                    <h3>WhatsApp</h3>
+
+                                    <p>(11) 9xxx-</p> 
+                                    <p>(11) 9xxx-</p> 
+                                </div>
+                            </div>
+
+
+                            <!-- Email -->
+                            <div class="col-md-6">
+                                <div class="info-item" data-aos="fade-up" data-aos-delay="200">
+                                    <i class="bi bi-envelope-at"></i>
+                                    <h3>Email</h3>
+
+                                    <p>suporte@seila.com.br</p> 
+                                    <p>vendas@seila.com.br</p>
+                                </div>
+                            </div>
+
+                            <!-- Horário -->
+                            <div class="col-md-6">
+                                <div class="info-item" data-aos="fade-up" data-aos-delay="200">
+                                    <i class="bi bi-clock"></i>
+                                    <h3>Horário</h3>
+                                    <p>terça - sexta</p> 
+
+                                    <p>12:00 - 18:00</p>
+                                </div>
+                            </div>
                         </div>
-
                     </div>
 
                      <div class="col-lg-6">
