--- a/index.html
+++ b/index.html
@@ -1241,9 +1241,8 @@
 
                     <!-- Coluna 1 -->
                     <div class="col-lg-6">
-                        
-                        <div class="row gy-4">
 
+                        <div class="row gy-4">
                             <!-- Endereço -->
                             <div class="col-md-6">
                                 <div class="info-item" data-aos="fade-up" data-aos-delay="200">
@@ -1251,7 +1250,7 @@
                                     <i class="bi bi-geo-alt"></i>
                                     <h3>Endereço</h3>
 
-                                    <p>Rua Sei la, 200</p> 
+                                    <p>Rua Sei la, 200</p>
 
                                     <p>São Paulo - SP</p>
 
@@ -1265,8 +1264,8 @@
                                     <i class="bi bi-whatsapp"></i>
                                     <h3>WhatsApp</h3>
 
-                                    <p>(11) 9xxx-</p> 
-                                    <p>(11) 9xxx-</p> 
+                                    <p>(11) 9xxx-</p>
+                                    <p>(11) 9xxx-</p>
                                 </div>
                             </div>
 
@@ -1277,7 +1276,7 @@
                                     <i class="bi bi-envelope-at"></i>
                                     <h3>Email</h3>
 
-                                    <p>suporte@seila.com.br</p> 
+                                    <p>suporte@seila.com.br</p>
                                     <p>vendas@seila.com.br</p>
                                 </div>
                             </div>
@@ -1287,7 +1286,7 @@
                                 <div class="info-item" data-aos="fade-up" data-aos-delay="200">
                                     <i class="bi bi-clock"></i>
                                     <h3>Horário</h3>
-                                    <p>terça - sexta</p> 
+                                    <p>terça - sexta</p>
 
                                     <p>12:00 - 18:00</p>
                                 </div>
@@ -1295,9 +1294,46 @@
                         </div>
                     </div>
 
-                     <div class="col-lg-6">
-                        Coluna 2
-                     </div>
+                    <!-- Coluna 2 == Formulario -->
+                    <div class="col-lg-6">
+
+                        <form action="https://formspree.io/f/mgvywzjq" method="post" class="email-form">
+
+                            <div class="row gy-4">
+
+                                <!-- Nome -->
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" placeholder="Nome Completo" required>
+                                </div>
+
+                                <!-- Email -->
+                                <div class="col-md-6">
+                                    <input type="email" class="form-control" placeholder="Digite o seu Email" required>
+                                </div>
+
+                                <!-- Assunto -->
+                                <div class="col-12">
+                                    <input type="text" class="form-control" placeholder="Assunto">
+                                </div>
+
+                                <!-- Mensagem -->
+                                <div class="col-12">
+                                    <textarea class="form-control" placeholder="Digite a sua dúvida" rows="6" name=""
+                                        id="" required> </textarea>
+                                </div>
+
+                                <!-- Botao // Enviar -->
+                                <div class="col-12 text-center">
+                                    <button type="submit" class="btn btn-outline-primary">
+                                        Enviar
+                                    </button>
+                                </div>
+
+                            </div>
+
+                        </form>
+
+                    </div>
 
                 </div>
 
