teste forms name

--- a/index.html
+++ b/index.html
@@ -1303,22 +1303,22 @@
 
                                 <!-- Nome -->
                                 <div class="col-md-6">
-                                    <input type="text" class="form-control" placeholder="Nome Completo" required>
+                                    <input type="text" class="form-control" placeholder="Nome Completo" name="nome" required>
                                 </div>
 
                                 <!-- Email -->
                                 <div class="col-md-6">
-                                    <input type="email" class="form-control" placeholder="Digite o seu Email" required>
+                                    <input type="email" class="form-control" placeholder="Digite o seu Email" name="email" required>
                                 </div>
 
                                 <!-- Assunto -->
                                 <div class="col-12">
-                                    <input type="text" class="form-control" placeholder="Assunto">
+                                    <input type="text" class="form-control" name="assunto" placeholder="Assunto">
                                 </div>
 
                                 <!-- Mensagem -->
                                 <div class="col-12">
-                                    <textarea class="form-control" placeholder="Digite a sua dúvida" rows="6" name=""
+                                    <textarea class="form-control" placeholder="Digite a sua dúvida" rows="6" name="mensagem"
                                         id="" required> </textarea>
                                 </div>
 
