--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -94,13 +95,15 @@
             <div id="hero-carousel" class="carousel slide carousel-fade">
 
                 <!-- Foto 1 -->
-                <div class="carousel-item active">
+                <div class="carousel-item active text-center">
                     <img src="img/hero-carousel/hero-carousel-1.jpg" alt="">
 
                     <div class="carousel-container">
                         <h2>Bem Vindo Nome da Empresa</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae laborum earum in
+                            excepturi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae laborum earum in
+                            excepturi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae laborum earum in
                             excepturi.
                         </p>
                         <a href="#about" class="btn btn-primary">
@@ -1318,8 +1321,7 @@
 
                                 <!-- Mensagem -->
                                 <div class="col-12">
-                                    <textarea class="form-control" placeholder="Digite a sua dúvida" rows="6" name="mensagem"
-                                        id="" required> </textarea>
+                                    <textarea class="form-control" placeholder="Digite a sua dúvida" rows="6" name="mensagem" id="" required></textarea>
                                 </div>
 
                                 <!-- Botao // Enviar -->
@@ -1328,30 +1330,22 @@
                                         Enviar
                                     </button>
                                 </div>
-
                             </div>
-
                         </form>
-
                     </div>
-
                 </div>
-
             </div>
-
         </section>
 
     </main>
 
     <footer id="footer" class="footer">
-
+        
     </footer>
 
     <a href="#hero" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
         <i class="bi bi-arrow-up-short"> </i>
     </a>
-
-
 
     <!-- Bootstrap JS Files -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
