--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -102,8 +101,10 @@
                         <h2>Bem Vindo Nome da Empresa</h2>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae laborum earum in
-                            excepturi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae laborum earum in
-                            excepturi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae laborum earum in
+                            excepturi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae laborum earum
+                            in
+                            excepturi.Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae laborum earum
+                            in
                             excepturi.
                         </p>
                         <a href="#about" class="btn btn-primary">
@@ -1306,12 +1307,14 @@
 
                                 <!-- Nome -->
                                 <div class="col-md-6">
-                                    <input type="text" class="form-control" placeholder="Nome Completo" name="nome" required>
+                                    <input type="text" class="form-control" placeholder="Nome Completo" name="nome"
+                                        required>
                                 </div>
 
                                 <!-- Email -->
                                 <div class="col-md-6">
-                                    <input type="email" class="form-control" placeholder="Digite o seu Email" name="email" required>
+                                    <input type="email" class="form-control" placeholder="Digite o seu Email"
+                                        name="email" required>
                                 </div>
 
                                 <!-- Assunto -->
@@ -1321,7 +1324,8 @@
 
                                 <!-- Mensagem -->
                                 <div class="col-12">
-                                    <textarea class="form-control" placeholder="Digite a sua dúvida" rows="6" name="mensagem" id="" required></textarea>
+                                    <textarea class="form-control" placeholder="Digite a sua dúvida" rows="6"
+                                        name="mensagem" id="" required></textarea>
                                 </div>
 
                                 <!-- Botao // Enviar -->
@@ -1340,7 +1344,146 @@
     </main>
 
     <footer id="footer" class="footer">
-        
+
+        <div class="container footer-top">
+            <div class="row gy-4">
+
+                <!-- Info Dados -->
+                <div class="col-lg-4 col-md-6 footer-about">
+
+                    <a href="#hero" class="logo d-flex align-items-center">
+                        <span>Agency</span>
+                    </a>
+
+                    <div class="footer-contact pt-3">
+                        <p>R: Sei Lá, 200</p>
+                        <p>São Paulo - SP</p>
+                        <p class="mt-3">
+                            <strong>
+                                Email:
+                            </strong>
+                            <span>
+                                email@emailteste.com.br
+                            </span>
+                        </p>
+                        <p>
+                            <strong>
+                                WhatsApp:
+                            </strong>
+                            <span>
+                                (11) 98765-4321
+                            </span>
+                        </p>
+                    </div>
+
+                    <div class="social-links d-flex mt-4">
+
+                        <a href="" target="_blank">
+                            <i class="bi bi-twitter-x"></i>
+                        </a>
+
+                        <a href="" target="_blank">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+
+                        <a href="" target="_blank">
+                            <i class="bi bi-github"></i>
+                        </a>
+
+                        <a href="" target="_blank">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-2 col-md-3 footer-links">
+                    <h4>Links Uteis</h4>
+                    <ul>
+                        <li>
+                            <a href="#hero">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#about">
+                                Sobre Nós
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#services">
+                                Serviços
+                            </a>
+                        </li>
+                        <li>
+                            <a href="termos.html" target="_blank">
+                                Termos de Serviço
+                            </a>
+                        </li>
+                        <li>
+                            <a href="politicas.html" target="_blank">
+                                Politicas de Privacidade
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-2 col-md-3 footer-links">
+                    <h4>Nossos Serviços</h4>
+                    <ul>
+                        <li>
+                            <a href=""> Serviço One</a>
+                        </li>
+                        <li>
+                            <a href=""> Serviço Two</a>
+                        </li>
+                        <li>
+                            <a href=""> Serviço Three</a>
+                        </li>
+                        <li>
+                            <a href=""> Serviço Four</a>
+                        </li>
+                        <li>
+                            <a href=""> Serviço Five</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-lg-4 col-md-12 footer-newsletter">
+                    <h4>Nossa Newsletter</h4>
+
+                    <p>Assine nossa Newsletter e receba as últimas novidades sobre os nossos produtos e serviços.</p>
+
+                    <form action="" method="post" class="email-form">
+
+                        <div class="newsletter-form">
+                            <input type="email" name="email">
+                            <input type="submit" value="Inscrever">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="container copyright text-center mt-4">
+
+            <p>
+                <span>
+                    &COPY; 2025.
+                </span>
+                <strong class="px-1">Agency</strong>
+                <span>
+                    Todos os Direitos Reservados.
+                </span>
+            </p>
+            <div class="credits">
+                Desenvolvido por
+                <a href="" target="_blank">
+                    <i class="bi bi-github"></i>
+                    Gustavo Feriani
+                </a>
+            </div>
+
+        </div>
     </footer>
 
     <a href="#hero" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
