--- a/index.html
+++ b/index.html
@@ -1343,7 +1343,7 @@
 
     </main>
 
-    <footer id="footer" class="footer">
+    <footer id="footer" class="footer bg-black">
 
         <div class="container footer-top">
             <div class="row gy-4">
