update final html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         content="Serviço para dev fullstack, criação de landing pages, bancos de dadis, APIS, APPs, logotipo">
     <meta name="keywords" content="Agency, Dev">
     <meta name="author" content="Gustavo Feriani">
+    
+    <!-- Fav Icon -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <!-- Bootstrap 5.3v -->
@@ -27,7 +30,6 @@
     <!-- Carousel // Slide -->
     <link href="https://cdn.jsdelivr.net/npm/swiper@9.4.0/swiper-bundle.min.css" rel="stylesheet">
 
-
     <!-- CSS personalizado // Principal -->
     <link rel="stylesheet" href="css/main.css">
 
@@ -44,7 +46,6 @@
             <a href="#home" class="logo d-flex align-items-center">
                 <h1 class="sitename"> Agency </h1>
             </a>
-
 
             <!-- Menu -->
             <nav id="navmenu" class="navmenu">
